<resources>
    <string name="app_name">BluetoothVoiceApp</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="listen_button">Speak</string>
    <string name="connection_status_disconnected">Disconnected</string>
    <string name="connection_status_connected">Connected to HC-05</string>
    <string name="recognized_text_placeholder">Recognized text will appear here</string>
    <string name="received_messages">Received messages:</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="unknown_device">Unknown Device</string>

</resources>