<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/scanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_for_devices" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:visibility="visible"/> <!-- Changed to visible for testing -->


    <!-- Connection Status -->
    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status_disconnected"
        android:textColor="#FF0000"
        android:textSize="18sp" />

    <!-- Listen Button -->
    <Button
        android:id="@+id/listenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen_button"
        android:layout_marginTop="16dp"/>

    <!-- Recognized Text -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recognized_text_placeholder"
        android:layout_marginTop="16dp" />

    <!-- Received Messages -->
    <TextView
        android:id="@+id/receivedMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received_messages"
        android:layout_marginTop="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:padding="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/messagesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </ScrollView>

</LinearLayout>
